Change #code link to point to this repo.

--- a/index.html
+++ b/index.html
@@ -32,10 +32,10 @@
 						
 						<footer>
 							<ul class="icons">
-								<li><a href="https://www.github.com/ViniciusArnhold/" class="icon-github" title="Projetos">Twitter</a></li>
-								<li><a href="mailto:viniciuspegoriniarnhold@gmail.com" class="icon-mail" title="Contato">Instagram</a></li>
-								<li><a href="http://www.linkedin.com/in/viniciusarnhold" class="icon-linkedin" title="Perfil">Facebook</a></li>
-								<li><a href="#" class="icon-code" title="Code">Facebook</a></li>
+								<li><a href="https://www.github.com/ViniciusArnhold/" class="icon-github" title="Projetos">Github</a></li>
+								<li><a href="mailto:viniciuspegoriniarnhold@gmail.com" class="icon-mail" title="Contato">E-Mail</a></li>
+								<li><a href="http://www.linkedin.com/in/viniciusarnhold" class="icon-linkedin" title="Perfil">Linkedin</a></li>
+								<li><a href="https://github.com/ViniciusArnhold/viniciusarnhold.github.io" class="icon-code" title="Code">Code</a></li>
 							</ul>
 						</footer>
 					</section>
@@ -43,7 +43,7 @@
 				<!-- Footer -->
 					<footer id="footer">
 						<ul class="copyright">
-							<li>&copy; Vinicius Pegorini Arnhold</li><li>Designed by: <a href="http://html5up.net">HTML5 UP</a></li>
+							<li>&copy; Vinicius Pegorini Arnhold</li><li>Design by: <a href="http://html5up.net">HTML5 UP</a></li>
 						</ul>
 					</footer>
 
